# rovi-aug

./: .gitignore  LICENSE  README.md  install.sh  pipeline_conf.yaml  pyproject.toml
rovi_aug/: pyproject.toml
rovi_aug/data_processing/: augment_dataset.py  multithreaded_adhoc_tfds_builder.py
rovi_aug/mods/: __init__.py  base_mod.py  merge_mod.py  robot_mask_mod.py  robot_to_robot_mod.py  video_inpaint_mod.py  view_augmentation_mod.py
rovi_aug/view_augmentation/: view_augmentation.py
rovi_aug/view_augmentation/data/: h5_traj_loader.py
rovi_aug/view_augmentation/sampler/: trajectory_consistent_sampler.py  uniform_view_sampler.py  view_sampler.py
